trying to fix background on mobile devices

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -9,22 +9,6 @@ p {
 }
 
 /**
-  * Background
-  */
-
-body {
-  background-image: linear-gradient(#158000, #61ff06);
-  margin: 0;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  font-family: Arial;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-/**
  * Table
  */
 
@@ -104,6 +88,20 @@ form {
   .tableheader {
     visibility: hidden;
   }
+
+  /**
+   * Background
+   */
+
+  body {
+    background-image: linear-gradient(#158000, #61ff06);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
 }
 
 /**
@@ -118,5 +116,21 @@ form {
   table {
     margin-left: 4.5%;
     margin-bottom: 3.5%;
+  }
+  
+  /**
+   * Background
+   */
+
+  body {
+    background-image: linear-gradient(#158000, #61ff06);
+    margin: 0;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
 }
